# initial-phonetic-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md
data/ambient_sounds/: README.md  animalsound.py
data/english/: README.md  matching_selection.py
data/japanese/: README.md  prepare_csj.py
notebooks/: README.md  paper.mplstyle  prettier_scores.py  trajectories.ipynb  tsne.ipynb
results/: README.md  prettier_scores.py
scripts/: README.md  cpc.sh  cpc_nodistributed.sh  launch_job.sh  launch_parallel.sh
src/plearning/: __init__.py  archive.py  best_epochs.py  cli.py  command.py  evaluate.py  mfcc.py  pairs.py  phone_pair.py  scores.py  train.py  tsne.py  utils.py
src/plearning/data/: __init__.py  partition.py  processor.py  vad.py  verify.py
